tests/basic/good/p_and_q_5.pepa
P1 = (a, 1.0) . P2 ;
P2 = (b, 2.0) . P1 ;

Q1 = (a, 2.0) . Q2 ;
Q2 = (b, 1.0) . Q1 ;

P1[5] <a> Q1[5]